[gd_scene load_steps=4 format=2]

[ext_resource path="res://2d-HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://2d-HUD/game.png" type="Texture" id=2]
[ext_resource path="res://2d-HUD/win.png" type="Texture" id=3]

[node name="HUD" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Info" type="Node2D" parent="."]
position = Vector2( 12, 59 )
scale = Vector2( 2, 2 )

[node name="Button" type="Button" parent="Info"]
margin_left = -3.0
margin_right = 40.0
margin_bottom = 23.0

[node name="TimerGO" type="Timer" parent="."]

[node name="goWinTexture" type="Node2D" parent="."]

[node name="goSprite" type="Sprite" parent="goWinTexture"]
position = Vector2( 540, 300 )
texture = ExtResource( 2 )

[node name="winSprite" type="Sprite" parent="goWinTexture"]
position = Vector2( 540, 300 )
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerGO" to="." method="_on_TimerGO_timeout"]
